tests/fixtures/invalid/float_bitor_bytes.py
# Cannot bitwise OR Float and Bytes
x: float = 1.0 | b"hello"
